--- a/core.test/build.gradle
+++ b/core.test/build.gradle
@@ -5,4 +5,5 @@ dependencies {
     compile project(':core')
     compile 'org.testng:testng:6.9.6'
     compile 'org.mockito:mockito-core:2.0.31-beta'
+    compile 'org.hamcrest:java-hamcrest:2.0.0.0'
 }
