--- a/core.test/build.gradle
+++ b/core.test/build.gradle
@@ -6,4 +6,12 @@ dependencies {
     compile 'org.testng:testng:6.9.6'
     compile 'org.mockito:mockito-core:2.0.31-beta'
     compile 'org.hamcrest:java-hamcrest:2.0.0.0'
+    compile 'com.badlogicgames.gdx:gdx:1.6.5'
+    compile 'com.badlogicgames.gdx:gdx-box2d:1.6.5'
+    testCompile 'com.badlogicgames.gdx:gdx:1.6.5'
+    testCompile 'com.badlogicgames.gdx:gdx-backend-headless:1.6.5'
+    testCompile 'com.badlogicgames.gdx:gdx-platform:1.6.5:natives-desktop'
+    testCompile 'com.badlogicgames.gdx:gdx-box2d:1.6.5'
+    testCompile 'com.badlogicgames.gdx:gdx-box2d-platform:1.6.5:natives-desktop'
+    compile 'com.binarytweed:quarantining-test-runner:0.0.3'
 }
